--- a/app/trading-finish.html
+++ b/app/trading-finish.html
@@ -923,7 +923,7 @@
       <li class="api-field">
         <label class="api-label">
           Title
-          <input class="api-input api-input-exchange input" name="api-title" type="text" readonly value="Binance">
+          <input class="api-input api-input-exchange input" name="api-title" type="text" value="Binance">
         </label>
       </li>
 
@@ -1021,8 +1021,8 @@
         <img class="offer-row-tooltip" src="img/dex/tooltip.svg" alt="Subscription cost tooltip" width="11" height="11">
 
         <div class="switcher">
-          <input class="switcher-radio sr-only" type="checkbox" id="swhitch-trades" name="switcher">
-          <label class="switcher-label" for="swhitch-trades">
+          <input class="switcher-radio sr-only" type="checkbox" id="switch-cost" name="switcher">
+          <label class="switcher-label" for="switch-cost">
             Free
           </label>
         </div>
@@ -1032,7 +1032,7 @@
         Subscription cost
       </label>
 
-      <input class="offer-input input" type="text" name="subscription" placeholder="Enter amount of BTC" id="offer-cost">
+      <input class="offer-input input" type="number" name="subscription" placeholder="Enter amount of BTC" id="offer-cost">
 
       <label class="offer-textarea">
         Description
@@ -1240,6 +1240,68 @@
       </a>
     </div>
   </div>
+</div>
+
+  <div class="graph-modal__container graph-modal__container--cropp" role="dialog" aria-modal="true" data-graph-target="cropp">
+
+  <form class="graph-modal__content delete" action="#">
+
+    <div class="graph-modal-top">
+      <h3 class="title-sec">
+        Crop image
+      </h3>
+
+      <button class="btn-reset graph-modal-close btn-cropp" aria-label="Close window" type="button">
+      </button>
+    </div>
+
+    <div class="graph-modal-cropp">
+
+      <img id='previewProfilePicture'>
+
+    </div>
+
+    <div class="graph-modal-btns">
+      <button class="graph-modal-close graph-modal-btn btn btn-default btn-cropp" type="button">
+        Cancel
+      </button>
+
+      <button class="graph-modal-btn graph-modal-close btn btn-background btn-cropp" id='done' type="button">
+        Crop
+      </button>
+    </div>
+  </form>
+</div>
+
+  <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="cropp-avatar">
+
+  <form class="graph-modal__content delete" action="#">
+
+    <div class="graph-modal-top">
+      <h3 class="title-sec">
+        Crop avatar
+      </h3>
+
+      <button class="btn-reset graph-modal-close btn-cropp" aria-label="Close window" type="button">
+      </button>
+    </div>
+
+    <div class="graph-modal-cropp">
+
+      <img id='previewProfileAvatar'>
+
+    </div>
+
+    <div class="graph-modal-btns">
+      <button class="graph-modal-close graph-modal-btn btn btn-default btn-cropp" type="button">
+        Cancel
+      </button>
+
+      <button class="graph-modal-btn graph-modal-close btn btn-background btn-cropp" id='done-avatar' type="button">
+        Crop
+      </button>
+    </div>
+  </form>
 </div>
 
 </div>
