--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -38,6 +38,11 @@
   @include('modals/_purchases.html')
 
   @include('modals/_close-offer.html')
+
+  @include('modals/_cropp.html')
+
+  @include('modals/_cropp-avatar.html')
+
 </div>
 </body>
 
