--- a/src/html/copy-trading/_tabs-action.html
+++ b/src/html/copy-trading/_tabs-action.html
@@ -10,9 +10,7 @@
     <button class="tabs-link btn btn-reset " data-graph-path="copy-filter" type="button">
       filters
 
-      <svg class="tabs-icon">
-        <use xlink:href="img/sprite.svg#profile-settings"></use>
-      </svg>
+      <img class="tabs-icon" src="img/exchange.svg" alt="exchange">
     </button>
 
   </li>
