--- a/src/html/modals/_add-api-exchange.html
+++ b/src/html/modals/_add-api-exchange.html
@@ -16,7 +16,7 @@
       <li class="api-field">
         <label class="api-label">
           Title
-          <input class="api-input api-input-exchange input" name="api-title" type="text" readonly value="Binance">
+          <input class="api-input api-input-exchange input" name="api-title" type="text" value="Binance">
         </label>
       </li>
 
