--- a/src/html/modals/_offers.html
+++ b/src/html/modals/_offers.html
@@ -54,8 +54,8 @@
         <img class="offer-row-tooltip" src="img/dex/tooltip.svg" alt="Subscription cost tooltip" width="11" height="11">
 
         <div class="switcher">
-          <input class="switcher-radio sr-only" type="checkbox" id="swhitch-trades" name="switcher">
-          <label class="switcher-label" for="swhitch-trades">
+          <input class="switcher-radio sr-only" type="checkbox" id="switch-cost" name="switcher">
+          <label class="switcher-label" for="switch-cost">
             Free
           </label>
         </div>
@@ -65,7 +65,7 @@
         Subscription cost
       </label>
 
-      <input class="offer-input input" type="text" name="subscription" placeholder="Enter amount of BTC" id="offer-cost">
+      <input class="offer-input input" type="number" name="subscription" placeholder="Enter amount of BTC" id="offer-cost">
 
       <label class="offer-textarea">
         Description
