--- a/src/html/notifications/_aside.html
+++ b/src/html/notifications/_aside.html
@@ -1,7 +1,7 @@
 <aside class="notifications-aside-wrapp">
   <div class="notifications-switcher notifications-switcher-all">
-    <input class="switcher-radio sr-only" type="checkbox" name="switcher-all" id="swhitch-notifications">
-    <label class="switcher-label" for="swhitch-notifications">
+    <input class="switcher-radio sr-only" type="checkbox" name="switcher-all" id="switch-notifications">
+    <label class="switcher-label" for="switch-notifications">
       <span aria-label="Switch off/on"></span>
       <span>All notifications</span>
     </label>
@@ -9,40 +9,40 @@
 
   <ul class="notifications-aside-switchers">
     <li class="notifications-aside-switcher">
-      <input class="switcher-radio sr-only" type="checkbox" name="switcher-likes" id="swhitch-likes">
-      <label class="switcher-label" for="swhitch-likes">
+      <input class="switcher-radio sr-only" type="checkbox" name="switcher-likes" id="switch-likes">
+      <label class="switcher-label" for="switch-likes">
         <span aria-label="Switch off/on"></span>
         <span>likes</span>
       </label>
     </li>
 
     <li class="notifications-aside-switcher">
-      <input class="switcher-radio sr-only" type="checkbox" name="switcher-followers" id="swhitch-followers">
-      <label class="switcher-label" for="swhitch-followers">
+      <input class="switcher-radio sr-only" type="checkbox" name="switcher-followers" id="switch-followers">
+      <label class="switcher-label" for="switch-followers">
         <span aria-label="Switch off/on"></span>
         <span>followers</span>
       </label>
     </li>
 
     <li class="notifications-aside-switcher">
-      <input class="switcher-radio sr-only" type="checkbox" name="switcher-trades" id="swhitch-trades">
-      <label class="switcher-label" for="swhitch-trades">
+      <input class="switcher-radio sr-only" type="checkbox" name="switcher-trades" id="switch-trades">
+      <label class="switcher-label" for="switch-trades">
         <span aria-label="Switch off/on"></span>
         <span>trades</span>
       </label>
     </li>
 
     <li class="notifications-aside-switcher">
-      <input class="switcher-radio sr-only" type="checkbox" name="switcher-streams" id="swhitch-streams">
-      <label class="switcher-label" for="swhitch-streams">
+      <input class="switcher-radio sr-only" type="checkbox" name="switcher-streams" id="switch-streams">
+      <label class="switcher-label" for="switch-streams">
         <span aria-label="Switch off/on"></span>
         <span>streams</span>
       </label>
     </li>
 
     <li class="notifications-aside-switcher">
-      <input class="switcher-radio sr-only" type="checkbox" name="switcher-comments" id="swhitch-comments">
-      <label class="switcher-label" for="swhitch-comments">
+      <input class="switcher-radio sr-only" type="checkbox" name="switcher-comments" id="switch-comments">
+      <label class="switcher-label" for="switch-comments">
         <span aria-label="Switch off/on"></span>
         <span>comments</span>
       </label>
