--- a/src/html/parts/_switcher.html
+++ b/src/html/parts/_switcher.html
@@ -1,6 +1,6 @@
 <div class="switcher">
-  <input class="switcher-radio sr-only" type="checkbox" name="switcher" id="swhitch-trades">
-  <label class="switcher-label" for="swhitch-trades">
+  <input class="switcher-radio sr-only" type="checkbox" name="switcher" id="switch-trades">
+  <label class="switcher-label" for="switch-trades">
     Show trades
   </label>
 </div>
