--- a/src/html/profile/trader/_about.html
+++ b/src/html/profile/trader/_about.html
@@ -32,10 +32,9 @@
       </div>
 
       <ul class="about-btns">
-        <li class="about-btns-item">
-          <button class="btn btn-default" type="button">
-            Follow
-          </button>
+
+        <li class="about-btns-item about-btns-cost">
+          Cost: <span>0.002</span> BTC/month
         </li>
 
         <li class="about-btns-item">
@@ -43,8 +42,13 @@
             Copy Trade
           </a>
         </li>
-      </ul>
 
+        <li class="about-btns-item">
+          <button class="btn btn-default" type="button">
+            Follow
+          </button>
+        </li>
+      </ul>
     </div>
 
     <div class="about-content">
@@ -79,7 +83,7 @@
           My Strategy
         </h3>
 
-        <p class="content">
+        <p class="content content-list">
           There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words. There are many variations of passages Lorem Ipsum available, but the majority have suffered alteration.
         </p>
 
