--- a/src/html/profile/trader/_actions.html
+++ b/src/html/profile/trader/_actions.html
@@ -1,18 +1,14 @@
 <ul class="tabs-action ">
   <li class="tabs-action-item">
     <button class="btn btn-currency" data-graph-path="currency-exchange" type="button">
-      <svg class="btn-icon">
-        <use xlink:href="img/sprite.svg#profile-settings"></use>
-      </svg>
+      <img class="btn-icon" src="img/exchange.svg" alt="exchange">
       Binance
     </button>
   </li>
 
   <li class="tabs-action-item">
     <button class="btn btn-data" type="button">
-      <svg class="btn-icon">
-        <use xlink:href="img/sprite.svg#calendar"></use>
-      </svg>
+      <img class="btn-icon" src="img/calendar.svg" alt="calendar">
       Month
     </button>
   </li>
