--- a/app/settings.html
+++ b/app/settings.html
@@ -204,7 +204,7 @@
   <div class="personal-inner">
     <div class="personal-avatar">
       <div class="avatar avatar-text" data-color="4">
-        <img class="avatar-img" loading="lazy" src="img/avatars/profile-avatar.jpg" width="70" height="70" alt="Profile avatar" />
+        <img class="avatar-img" id="personal-avatar-img" loading="lazy" src="img/avatars/profile-avatar.jpg" width="70" height="70" alt="Profile avatar" />
         <!-- <span class="avatar-text">
         TM
       </span> -->
@@ -214,7 +214,7 @@
         Change
       </label>
 
-      <input class="sr-only" type="file" id="personal-avatar" accept="image/png, image/jpg, image/gif" name="personal-avatar">
+      <input class="sr-only" type="file" id="personal-avatar" accept="image/*" name="personal-avatar" data-graph-path="cropp-avatar">
     </div>
 
     <div class="personal-private">
@@ -965,7 +965,7 @@
       <li class="api-field">
         <label class="api-label">
           Title
-          <input class="api-input api-input-exchange input" name="api-title" type="text" readonly value="Binance">
+          <input class="api-input api-input-exchange input" name="api-title" type="text" value="Binance">
         </label>
       </li>
 
@@ -1063,8 +1063,8 @@
         <img class="offer-row-tooltip" src="img/dex/tooltip.svg" alt="Subscription cost tooltip" width="11" height="11">
 
         <div class="switcher">
-          <input class="switcher-radio sr-only" type="checkbox" id="swhitch-trades" name="switcher">
-          <label class="switcher-label" for="swhitch-trades">
+          <input class="switcher-radio sr-only" type="checkbox" id="switch-cost" name="switcher">
+          <label class="switcher-label" for="switch-cost">
             Free
           </label>
         </div>
@@ -1074,7 +1074,7 @@
         Subscription cost
       </label>
 
-      <input class="offer-input input" type="text" name="subscription" placeholder="Enter amount of BTC" id="offer-cost">
+      <input class="offer-input input" type="number" name="subscription" placeholder="Enter amount of BTC" id="offer-cost">
 
       <label class="offer-textarea">
         Description
@@ -1282,6 +1282,68 @@
       </a>
     </div>
   </div>
+</div>
+
+  <div class="graph-modal__container graph-modal__container--cropp" role="dialog" aria-modal="true" data-graph-target="cropp">
+
+  <form class="graph-modal__content delete" action="#">
+
+    <div class="graph-modal-top">
+      <h3 class="title-sec">
+        Crop image
+      </h3>
+
+      <button class="btn-reset graph-modal-close btn-cropp" aria-label="Close window" type="button">
+      </button>
+    </div>
+
+    <div class="graph-modal-cropp">
+
+      <img id='previewProfilePicture'>
+
+    </div>
+
+    <div class="graph-modal-btns">
+      <button class="graph-modal-close graph-modal-btn btn btn-default btn-cropp" type="button">
+        Cancel
+      </button>
+
+      <button class="graph-modal-btn graph-modal-close btn btn-background btn-cropp" id='done' type="button">
+        Crop
+      </button>
+    </div>
+  </form>
+</div>
+
+  <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="cropp-avatar">
+
+  <form class="graph-modal__content delete" action="#">
+
+    <div class="graph-modal-top">
+      <h3 class="title-sec">
+        Crop avatar
+      </h3>
+
+      <button class="btn-reset graph-modal-close btn-cropp" aria-label="Close window" type="button">
+      </button>
+    </div>
+
+    <div class="graph-modal-cropp">
+
+      <img id='previewProfileAvatar'>
+
+    </div>
+
+    <div class="graph-modal-btns">
+      <button class="graph-modal-close graph-modal-btn btn btn-default btn-cropp" type="button">
+        Cancel
+      </button>
+
+      <button class="graph-modal-btn graph-modal-close btn btn-background btn-cropp" id='done-avatar' type="button">
+        Crop
+      </button>
+    </div>
+  </form>
 </div>
 
 </div>
